fixing visibility of login screens

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,7 +74,8 @@ position: absolute;
 	height: 420px;
 	padding: 80px 40px;
 	box-sizing: border-box;
-	background: rgba(0,0,0,.5);
+	background: rgba(0,0,0,.65);
+    color:aliceblue;
 }
 
 .loginBox2
@@ -219,7 +220,7 @@ position: absolute;
 	width: 28%;
 	height: 75%;
 	padding: 60px 40px;
-	background: rgba(0,0,0,.5);
+	background: rgba(0,0,0,0.65);
 }
 .registerBox h2{
     margin-top: -45px;
